Fix profile picture width on small screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -71,6 +71,7 @@ $palette: (
   img {
     border-radius: 50%;
     margin-right: 2em;
+    max-width: 40%;
   }
 }
 
